# proof-step-graph

./: .gitignore  LICENSE  README.md  analyze_graphs.py  lake-manifest.json  lakefile.toml  pyproject.toml  tmpj2a5iz6z.lean  trace_dataset.py  trace_file.py  trace_goedel.py  trace_mathlib.py  visualize_graphs.py
ProofGraph/: Demo.lean
ProofStepGraph/: Demo.lean
PyPantograph/: build-pantograph.py
PyPantograph/src/: .gitignore  .pre-commit-config.yaml
proof_evals/: analyze_graphs.ipynb  analyze_graphs.py  real_proofs_graphs_stats.csv  visualize_graphs.ipynb  visualize_graphs.py
proof_evals/viz/: and_intro_manual.html  impl_trans.html  lean_workbook_22790.html  lean_workbook_29184.html  lean_workbook_36579.html  lean_workbook_6556.html  lean_workbook_plus_1192.html  lean_workbook_plus_14776.html  lean_workbook_plus_6875.html  list_append_nil.html  my_and_comm.html  my_or_comm.html  nat_add_comm.html  nat_add_zero.html  nat_zero_or_succ.html
proof_graph/: __init__.py  graph.py  tracer.py
proof_step_graph/: __init__.py  graph.py  parse_lean.py  tracer.py
scripts/: setup.sh  setup_oscar.sh  trace_dataset.py  trace_file.py  trace_mathlib.py
